--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/sbrhutchens/jboard",
   "dependencies": {
     "ejs": "^2.3.1",
-    "express": "^4.12.4"
+    "express": "^4.12.4",
+    "mongoose": "^4.0.5"
   }
 }
