Add body parser package

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sbrhutchens/jboard",
   "dependencies": {
+    "body-parser": "^1.12.4",
     "ejs": "^2.3.1",
     "express": "^4.12.4",
     "mongoose": "^4.0.5"
