--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "ejs": "^2.3.1",
     "express": "^4.12.4",
-    "mongoose": "^4.0.5"
+    "mongoose": "^4.0.5",
+    "stripe": "^3.4.0"
   }
 }
